fix: icon alignment for SplitButton component & update Icons package version

--- a/packages/blocks/styles/mono/components/t-split-button.css
+++ b/packages/blocks/styles/mono/components/t-split-button.css
@@ -35,5 +35,5 @@
 .t-split-gray .t-divider {
   height: 20px;
   border-left: 1px solid rgba(209, 213, 219);
-  @apply ml-3 mr-2;
+  @apply ml-3 mr-1;
 }
